# monad-logger-syslog

./: .gitignore  .travis.yml  ChangeLog.md  README.md  monad-logger-syslog.cabal  stack.yaml
Control/Monad/Logger/: Syslog.hs
System/Log/MonadLogger/: Syslog.hs
