name:                monad-logger-syslog
version:             0.1.0.0
synopsis:            syslog output for monad-logger
description:         syslog output for monad-logger
homepage:            https://github.com/docmunch/monad-logger-syslog
license:             MIT
license-file:        LICENSE
author:              Greg Weber
maintainer:          greg@gregweber.info
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag smoke
  description: enable smoke-app executable
  default:     False

library
  default-language:    Haskell2010
  exposed-modules:     System.Log.MonadLogger.Syslog
  ghc-options:        -Wall
  build-depends:       base >=4.6 && <4.9
                     , monad-logger >= 0.3.4.0
                     , fast-logger >= 2.1.0
                     , hsyslog
                     , transformers
                     , text
                     , bytestring

test-suite smoke
  if flag(smoke)
    buildable: True
  else
    buildable: False
  default-language:    Haskell2010

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: smoke.hs

  build-depends: base, monad-logger, monad-logger-syslog, shelly
