name:                monad-logger-syslog
version:             0.1.0.0
synopsis:            syslog output for monad-logger
description:         syslog output for monad-logger
homepage:            https://github.com/docmunch/monad-logger-syslog
license:             MIT
license-file:        LICENSE
author:              Greg Weber
maintainer:          greg@gregweber.info
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     Control.Monad.Logger.Syslog
                       System.Log.MonadLogger.Syslog
  ghc-options:        -Wall
  build-depends:       base >=4.6 && <4.9
                     , bytestring
                     , fast-logger
                     , hsyslog
                     , monad-logger
                     , text
                     , transformers
